--- a/index.html
+++ b/index.html
@@ -35,55 +35,75 @@
       </div>
     </header>
 
-    <section class="section">
-      <div class="container-center">
-        <div class="block_header">
-          Создание предприятия<span>производство</span>
+    <section>
+      <div class="container-full">
+        <div class="vertical-lr">
+          <div class="next-section--empty"></div>
         </div>
 
-        <div class="block-points__inner">
-          <p class='p--left'>
-            В 2019-2020 годах на АО «Металлургический завод «Петросталь»
-            произведено техническое переоснащение существующего производства. В
-            результате реализации этого проекта создан новый металлургический
-            комплекс НПО «Лаборатория специальных сталей и сплавов» (цех 170),
-            предназначенный для производства сортовых и кузнечных слитков
-            открытой выплавки и слитков электрошлакового переплава из сталей и
-            сплавов специального назначения, имеющих повышенные прочностные и
-            пластические свойства при низких и высоких температурах, стойких к
-            щелочам и кислотам, со специальными и регламентированными
-            механическими свойствами.
-          </p>
-          <img src="img/manuf.png" alt="" />
-        </div>
-      </div>
-    </section>
+        <div class="container">
+          <div class="block_header">
+            Создание предприятия<span>производство</span>
+          </div>
 
-    <section class="section">
-      <div class="container-center">
-        <div class="block_header">
-          Развитие предприятия<span>оснащение</span>
+          <div class="block-points__inner">
+            <p class="p--left">
+              В 2019-2020 годах на АО «Металлургический завод «Петросталь»
+              произведено техническое переоснащение существующего производства.
+              В результате реализации этого проекта создан новый
+              металлургический комплекс НПО «Лаборатория специальных сталей и
+              сплавов» (цех 170), предназначенный для производства сортовых и
+              кузнечных слитков открытой выплавки и слитков электрошлакового
+              переплава из сталей и сплавов специального назначения, имеющих
+              повышенные прочностные и пластические свойства при низких и
+              высоких температурах, стойких к щелочам и кислотам, со
+              специальными и регламентированными механическими свойствами.
+            </p>
+            <img src="img/manuf.png" alt="" />
+          </div>
         </div>
 
-        <div class="block-points__inner">
-          <img src="img/manuf.png" alt="" />
-          <p class='p--right'>
-            В 2019-2020 годах на АО «Металлургический завод «Петросталь»
-            произведено техническое переоснащение существующего производства. В
-            результате реализации этого проекта создан новый металлургический
-            комплекс НПО «Лаборатория специальных сталей и сплавов» (цех 170),
-            предназначенный для производства сортовых и кузнечных слитков
-            открытой выплавки и слитков электрошлакового переплава из сталей и
-            сплавов специального назначения, имеющих повышенные прочностные и
-            пластические свойства при низких и высоких температурах, стойких к
-            щелочам и кислотам, со специальными и регламентированными
-            механическими свойствами.
-          </p>
+        <div class="vertical-rl">
+          <div class="next-section--empty"></div>
         </div>
       </div>
     </section>
 
     <section>
+      <div class="container-full">
+        <div class="vertical-lr">
+          <div class="next-section--empty"></div>
+        </div>
+
+        <div class="container">
+          <div class="block_header">
+            Развитие предприятия<span>оснащение</span>
+          </div>
+
+          <div class="block-points__inner">
+            <img src="img/manuf.png" alt="" />
+            <p class="p--right">
+              В 2019-2020 годах на АО «Металлургический завод «Петросталь»
+              произведено техническое переоснащение существующего производства.
+              В результате реализации этого проекта создан новый
+              металлургический комплекс НПО «Лаборатория специальных сталей и
+              сплавов» (цех 170), предназначенный для производства сортовых и
+              кузнечных слитков открытой выплавки и слитков электрошлакового
+              переплава из сталей и сплавов специального назначения, имеющих
+              повышенные прочностные и пластические свойства при низких и
+              высоких температурах, стойких к щелочам и кислотам, со
+              специальными и регламентированными механическими свойствами.
+            </p>
+          </div>
+        </div>
+
+        <div class="vertical-rl">
+          <div class="next-section--empty"></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
       <div class="container-full">
         <div class="vertical-lr">
           <img class="next-section__arrow" src="img/arrow_in_squ.svg" alt="" />
@@ -160,7 +180,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="section">
       <div class="container-full">
         <div class="vertical-lr">
           <div class="next-section--empty"></div>
@@ -228,7 +248,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="section">
       <div class="container-full">
         <div class="vertical-lr">
           <img class="next-section__arrow" src="img/arrow_in_squ.svg" alt="" />
@@ -286,7 +306,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="section">
       <div class="container-full">
         <div class="vertical-lr">
           <div class="next-section--empty"></div>
@@ -327,7 +347,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="section">
       <div class="container-full">
         <div class="vertical-lr">
           <img class="next-section__arrow" src="img/arrow_in_squ.svg" alt="" />
@@ -383,7 +403,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="section">
       <div class="container-full">
         <div class="vertical-lr">
           <div class="next-section--empty"></div>
@@ -435,7 +455,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="section">
       <div class="container-full">
         <div class="vertical-lr">
           <img class="next-section__arrow" src="img/arrow_in_squ.svg" alt="" />
@@ -478,7 +498,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="section">
       <div class="container-full">
         <div class="vertical-lr">
           <div class="next-section--empty"></div>
@@ -490,25 +510,22 @@
           </div>
           <div class="block-points__inner">
             <img src="img/Склад.png" alt="" />
-            <p class='p--right'>
+            <p class="p--right">
               Слитки открытой дуговой выплавки и электрошлакового переплава
               подвергают контролю качества боковой поверхности и локальной
               зачистке дефектов.
             </p>
           </div>
 
-
           <div class="block-points__inner">
-            <p class='p--left'>
-              Зачистка дефектов производится выплавкой (огнём)
-              или обдиркой на подвесном обдирочно-шлифовальном станке На слитках
-              ЭШП дополнительно производится удаление донной и, при
-              необходимости, головной части.
+            <p class="p--left">
+              Зачистка дефектов производится выплавкой (огнём) или обдиркой на
+              подвесном обдирочно-шлифовальном станке На слитках ЭШП
+              дополнительно производится удаление донной и, при необходимости,
+              головной части.
             </p>
             <img src="img/Склад-1.png" alt="" />
-            
           </div>
-         
         </div>
 
         <div class="vertical-rl">
@@ -520,7 +537,7 @@
       </div>
     </section>
 
-    <section class="section">
+    <section>
       <div class="container-center">
         <div class="block_header">
           Экспресс-лаборатория<span>оснащение</span>
@@ -556,28 +573,39 @@
       </div>
     </section>
 
-    <section class="section">
-      <div class="container-center">
-        <div class="block_header">
-          Совершенство технологий<span>производство</span>
+    <section>
+      <div class="container-full">
+        <div class="vertical-lr">
+          <div class="next-section--empty"></div>
         </div>
 
-        <div class="block-points__inner">
-          <p class='p--left'>
-            Предприятие полностью самостоятельно обеспечивается расходуемыми
-            электродами для электрошлакового переплава из любых сталей и
-            сплавов. Постоянное совершенствование технологии производства стали
-            и проката, обновление и расширение состава оборудования,
-            систематическое повышение квалификации рабочих и специалистов
-            позволяет обеспечивать самые жесткие требования заказчиков к
-            качеству продукции.
-          </p>
-          <img src="img/modern.png" alt="" />
+        <div class="container">
+          <div class="block_header">
+            Совершенство технологий<span>производство</span>
+          </div>
+
+          <div class="block-points__inner">
+            <p class="p--left">
+              Предприятие полностью самостоятельно обеспечивается расходуемыми
+              электродами для электрошлакового переплава из любых сталей и
+              сплавов. Постоянное совершенствование технологии производства
+              стали и проката, обновление и расширение состава оборудования,
+              систематическое повышение квалификации рабочих и специалистов
+              позволяет обеспечивать самые жесткие требования заказчиков к
+              качеству продукции.
+            </p>
+            <img src="img/modern.png" alt="" />
+          </div>
         </div>
+
+        <div class="vertical-rl">
+          <div class="next-section--empty"></div>
+        </div>
+
       </div>
     </section>
 
-    <section class="section">
+    <section>
       <div class="container-center">
         <div class="block_header">
           Эффективное производство<span>производство</span>
@@ -828,7 +856,11 @@
           <div class="requisites__inner">
             <ul class="requisites__list">
               <li class="requisites__item">
-                <img class="requisites__item-img" src="img/arrow_in_squ.svg" alt="">
+                <img
+                  class="requisites__item-img"
+                  src="img/arrow_in_squ.svg"
+                  alt=""
+                />
                 <div class="requisites__item-content">Реквизиты компании</div>
               </li>
             </ul>
