--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
           </li>
         </ul>
         <h1 class="site__title">
+          Предприятие <br>
           ООО «НПО «Лаборатория Специальных Сталей и Сплавов»
         </h1>
         <ul class="header__items header__items-bottom">
           <li>
             <div class="header__item third">Охрана труда</div>
           </li>
+
+          <img class="header__item__arrow" src="img/arrow_in_squ.svg" alt="" />
 
           <li>
             <div class="header__item fourth">Экологическая политика</div>
@@ -870,6 +873,9 @@
         <div class="footer__end">
           ©️ Общество с ограниченной ответственностью «НПО Лаборатория
           специальных сталей и сплавов»
+          <br>
+          <br>
+          Все права защищены.
         </div>
       </div>
     </footer>
